@@ -20,31 +20,36 @@
  * USA
  */
 
-package net.sourceforge.cobertura.reporting.html;
-
-import java.util.Set;
+package net.sourceforge.cobertura.reporting;
 
 import junit.framework.TestCase;
 
-public class PackageTest extends TestCase
+public class ClazzTest extends TestCase
 {
 
-	public void testPackage()
+	public static void testClazz()
 	{
-		final String packageName = "com.example.helloworld";
-		Package pkg;
+		Clazz clazz;
 
-		pkg = new Package(packageName);
-		assertEquals(packageName, pkg.getName());
+		clazz = new Clazz("HelloWorld");
+		assertEquals("HelloWorld", clazz.getName());
+		assertEquals("", clazz.getPackageName());
+		assertEquals("HelloWorld.java", clazz.getLongFileName());
+		assertEquals("HelloWorld", clazz.getLongName());
+		assertEquals(0, clazz.getBranchCoverageRate(), 0);
+		assertEquals(1.0, clazz.getLineCoverageRate(), 0);
+		assertFalse(clazz.isValidSourceLine(19));
 
-		Set classes = pkg.getClasses();
-		assertNotNull(classes);
-		assertEquals(0, classes.size());
+		clazz = new Clazz("com.example.HelloWorld");
+		assertEquals("HelloWorld", clazz.getName());
+		assertEquals("com.example", clazz.getPackageName());
+		assertEquals("com/example/HelloWorld.java", clazz.getLongFileName());
+		assertEquals("com.example.HelloWorld", clazz.getLongName());
 
 		try
 		{
-			new Package(null);
-			fail("Expected an IllegalArgumentException but none was thrown!");
+			new Clazz(null);
+			fail("Expected an IllegalArgumentException but did not receive one!");
 		}
 		catch (IllegalArgumentException e)
 		{
