@@ -22,6 +22,9 @@ version 1.1
 	  Previously we were not escaping some characters correctly in the
 	  generated XML coverage report (specificially < and >).
 	* Set the class-path in the cobertura.jar manifest file correctly.
+	* Fill feature request #1151779 with a patch from Jeremy Thomerson.
+	  This changes the structure of the XML report so that <classes> are
+	  enclosed inside <packages>.
 
 version 1.0
 	* Forked jcoverage 1.0.5 (although the version in the source says 1.0.4).
